--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "main": "index.js",
     "devDependencies": {},
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "npm i; nohup node index.js &"
     },
     "repository": {
         "type": "git",
