--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^5.1.0",
-        "universal-edge-tts": "^1.3.2"
+        "universal-edge-tts": "^1.3.2",
+        "vercel": "^48.4.0"
     },
     "name": "storyrun",
     "version": "1.0.0",
     "main": "index.js",
-    "devDependencies": {},
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "npm i && node index.js"
