--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,6 @@
   "routes": [
     { "src": "/generate-speech", "dest": "/index.js" },
     { "src": "/api/(.*)", "dest": "/index.js" },
-    { "src": "/(.*)", "dest": "/public/$1" }
+    { "src": "/(.*)", "dest": "/$1" }
   ]
 }
