--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,6 @@
   ],
   "routes": [
     { "src": "/generate-speech", "dest": "/index.js" },
-    { "src": "/api/(.*)", "dest": "/index.js" },
-    { "src": "/(.*)", "dest": "/$1" }
+    { "src": "/api/(.*)", "dest": "/index.js" }
   ]
 }
