--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,12 @@
   "id": "storyrun",
   "icons": [
     {
-      "src": "icon.png"
+      "src": "icon.png",
+      "sizes": "512x512"
+    },
+    {
+      "src": "icon192.png",
+      "sizes": "192x192"
     }
   ]
 }
