--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
     "dependencies": {
+        "@tgwf/co2": "^0.16.9",
+        "co2": "^0.1.0",
         "cors": "^2.8.5",
         "express": "^5.1.0",
         "universal-edge-tts": "^1.3.2",
