--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,14 @@
 {
-  "rewrites": [{ "source": "/api", "destination": "/api/generate-speech" }]
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.js"
+    }
+  ]
 }
