--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
     "dependencies": {
         "@tgwf/co2": "^0.16.9",
+        "@vercel/blob": "^2.0.0",
         "co2": "^0.1.0",
         "cors": "^2.8.5",
         "express": "^5.1.0",
+        "firebase-functions": "^7.0.0",
         "universal-edge-tts": "^1.3.2",
-        "vercel": "^48.4.0"
+        "vercel": "^48.10.2"
     },
     "name": "storyrun",
     "version": "1.0.0",
