--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "cors": "^2.8.5",
         "express": "^5.1.0",
         "firebase-functions": "^7.0.0",
+        "mp3-to-aac": "^1.0.2",
         "universal-edge-tts": "^1.3.2",
         "vercel": "^48.10.2"
     },
