--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "npm i && node index.js"
-    },
+        "test": "echo \"Error: no test specified\" && exit 1"
+        },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/theutisticcoder/storyrun.git"
